--- a/scss/style.css
+++ b/scss/style.css
@@ -94,7 +94,7 @@ button {
 }
 
 header {
-  height: 769px;
+  height: 668px;
   background: linear-gradient(0deg, rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.45));
   position: relative;
 }
@@ -333,13 +333,14 @@ footer {
 }
 
 .camera {
+  background-blend-mode: luminosity;
+  background-image: url(../img/camera.png);
+  background-color: #efe7ff;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 50%;
   height: 480px;
-}
-.camera img {
-  width: 100%;
-  height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
 }
 
 .live {
@@ -384,15 +385,9 @@ footer {
   height: 100%;
 }
 
-.contact {
-  background: url(../img/BG-contact.jpg);
-  background-size: cover;
-  background-position: center center;
-  height: 900px;
-}
-
 .middlecont {
-  padding-bottom: 230px;
+  position: relative;
+  z-index: 1;
 }
 .middlecont__title {
   margin-bottom: 32px;
@@ -407,15 +402,130 @@ footer {
   font-family: GothamBold;
 }
 
-@media (max-width: 1440px) {
-  header {
-    height: 668px;
-  }
-
-  .contact {
-    height: 748px;
-  }
+.works {
+  background: url(../img/bgwork.jpg);
+  background-size: cover;
+  background-position: center center;
+  height: 748px;
 }
+
+.work {
+  max-width: 720px;
+  padding-bottom: 166px;
+}
+.work__title {
+  margin-bottom: 32px;
+}
+.work__we {
+  font-size: 16px;
+  line-height: 20px;
+  margin-bottom: 13px;
+}
+.work__for {
+  margin-bottom: 24px;
+}
+.work__if {
+  font-size: 20px;
+  line-height: 24px;
+  font-family: GothamBold;
+}
+
+.greatest {
+  max-width: 50%;
+  height: 564px;
+}
+.greatest__title {
+  margin-bottom: 24px;
+}
+.greatest__info {
+  margin-bottom: 10px;
+  font-size: 16px;
+  line-height: 20px;
+}
+.greatest__list li {
+  margin-bottom: 6px;
+}
+.greatest__list li:last-child {
+  margin-bottom: 0px;
+}
+
+.greatesting {
+  padding-bottom: 120px;
+  background: #3d2f59;
+}
+
+.contact {
+  height: 100vh;
+  background: url(../img/bgcontact.jpg);
+  background-size: cover;
+  background-position: center center;
+}
+
+.headercontact {
+  margin-bottom: 190px;
+}
+
+.map {
+  position: absolute;
+  top: 213px;
+  right: 83px;
+}
+.map img {
+  max-width: 100%;
+}
+
+.job {
+  padding: 80px 0;
+  color: #2f214c;
+}
+.job__opport {
+  text-align: center;
+  margin-bottom: 64px;
+}
+.job__variant {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+.job__variant__var {
+  padding: 80px;
+}
+.job__variant__var-head {
+  margin-bottom: 24px;
+}
+.job__variant__var-text {
+  margin-bottom: 15px;
+  line-height: 20px;
+}
+.job__variant__var-text2 {
+  margin-bottom: 32px;
+  line-height: 20px;
+}
+.job__variant__var-btn {
+  text-transform: uppercase;
+  font-size: 14px;
+  font-family: GothamBold;
+  padding: 8px 16px;
+  border: 1px solid #8b00ff;
+  border-radius: 100px;
+}
+.job__variant__var:first-child {
+  border-right: 1px solid #E2E0E6;
+  border-bottom: 1px solid #E2E0E6;
+}
+.job__variant__var:nth-child(2) {
+  border-right: 1px solid #E2E0E6;
+  border-bottom: 1px solid #E2E0E6;
+}
+.job__variant__var:nth-child(3) {
+  border-bottom: 1px solid #E2E0E6;
+}
+.job__variant__var:nth-child(4) {
+  border-right: 1px solid #E2E0E6;
+}
+.job__variant__var:nth-child(5) {
+  border-right: 1px solid #E2E0E6;
+}
+
 @media (max-width: 1280px) {
   .second__right {
     padding: 50px;
@@ -441,10 +551,14 @@ footer {
   .company__info__extra span {
     font-size: 16px;
   }
+
+  .job__variant__var {
+    padding: 40px;
+  }
 }
 @media (max-width: 960px) {
   .img-logo {
-    z-index: 1;
+    z-index: 3;
   }
 
   nav {
@@ -456,6 +570,7 @@ footer {
     right: 0%;
     top: 0%;
     padding-top: 96px;
+    z-index: 2;
   }
 
   .logo {
@@ -471,7 +586,7 @@ footer {
     height: 40px;
     width: 40px;
     background-color: #8b00ff;
-    z-index: 2;
+    z-index: 3;
   }
   [for=burger]::before {
     content: "";
@@ -533,6 +648,10 @@ footer {
     line-height: 32px;
   }
 
+  h3 {
+    font-size: 20px;
+  }
+
   .second {
     flex-direction: column-reverse;
   }
@@ -577,6 +696,18 @@ footer {
   .second-what {
     flex-direction: column;
   }
+
+  .map {
+    top: 400px;
+  }
+
+  .greatest {
+    width: 100%;
+  }
+
+  .secondwork {
+    flex-direction: column;
+  }
 }
 @media (max-width: 860px) {
   .footer {
@@ -585,6 +716,16 @@ footer {
   }
   .footer__info {
     margin-bottom: 24px;
+  }
+
+  .job__variant {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .job__variant__var:nth-child(3) {
+    border-right: 1px solid #E2E0E6;
+  }
+  .job__variant__var:nth-child(4) {
+    border-bottom: 1px solid #E2E0E6;
   }
 }
 @media (max-width: 768px) {
@@ -633,10 +774,6 @@ footer {
   }
 }
 @media (max-width: 576px) {
-  h3 {
-    font-size: 20px;
-  }
-
   h4 {
     font-size: 16px;
   }
@@ -743,6 +880,10 @@ footer {
     right: 32px;
     height: 40px;
   }
+
+  .job__variant {
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
 @media (max-width: 420px) {
   header {
@@ -755,7 +896,7 @@ footer {
   }
 
   .contact {
-    height: 460px;
+    height: 484px;
   }
 
   .middle {
@@ -834,19 +975,10 @@ footer {
     margin-bottom: 0px;
   }
 
-  .contact {
-    background: url(../img/bg-contacts-min.jpg);
-    background-size: cover;
-    background-position: center center;
-  }
-
   .headercontact {
     margin-bottom: 20px;
   }
 
-  .middlecont {
-    padding-bottom: 236px;
-  }
   .middlecont__title {
     margin-bottom: 20px;
   }
@@ -860,5 +992,14 @@ footer {
   .middlecont__mail {
     font-size: 14px;
     line-height: 18px;
+  }
+
+  .map {
+    top: 287px;
+    right: 24px;
+  }
+  .map img {
+    width: 248px;
+    height: 152px;
   }
 }/*# sourceMappingURL=style.css.map */
